# fast-writing

./: README.md
.github/: deploy-api.yml  deploy-front.yml
.github/workflows/: deploy-api.yml  deploy-front.yml  deploy-job.yml  exec-build.yml
apps/: Makefile
apps/fast-writing-api/: .gitignore  Dockerfile  Readme.md  config.yaml  go.mod  go.sum  makefile
apps/fast-writing-api/client/: connection.go
apps/fast-writing-api/config/: config.go
apps/fast-writing-api/database/: database.go  user.go  writing_contents.go
apps/fast-writing-api/domain/: user.go  writing_contents.go
apps/fast-writing-api/pb/: fast-writing.pb.go  fast-writing_grpc.pb.go  search.pb.go  search_grpc.pb.go
apps/fast-writing-api/proto/: fast-writing.proto  search.proto
apps/fast-writing-api/service/: auth_interceptor.go  (+5 more)
apps/front/: Dockerfile  default.conf  nginx.conf  package-lock.json  package.json
apps/proto/: api_config.yaml  fast-writing.proto  gcloud_build_image  search.proto
apps/push-api/: .env  Cargo.toml
apps/push-api/migrations/2022-09-25-015825_create_pushes/: down.sql  up.sql
apps/push-api/src/: error.rs  main.rs  schema.rs
apps/push-api/src/domain/: notification.rs
apps/push-api/src/driver/: mod.rs  writing_db.rs
apps/push-api/src/gateway/: notification.rs
apps/push-api/src/port/: notification.rs
apps/push-api/src/rest/: mod.rs
apps/push-api/src/usecase/: mod.rs  notification_get_all.rs
apps/push-app/: .dockerignore  .env  Cargo.toml  Dockerfile  README.md
apps/push-app/src/: lib.rs  main.rs  models.rs  schema.rs
apps/quiz-notifier/: Cargo.toml
apps/quiz-notifier/src/: error.rs  main.rs  mysql.rs  schema.rs
apps/quiz-notifier/src/driver/: mod.rs  user_db.rs
apps/quiz-notifier/src/rest/: mod.rs  systems.rs  users.rs
apps/search-api/: Dockerfile  config.yaml  go.mod  go.sum  readme.md  save-test.json
environments/endpoints/: README.md  api_config.yaml  api_descriptor.pb
pkg/pb/: fast-writing.pb.go  fast-writing_grpc.pb.go  go.mod  search.pb.go  search_grpc.pb.go
(+89 files in other folders)
