[package]
name = "push-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["r2d2", "mysql"] }
r2d2 = "0.8.10"
dotenvy = "0.15"
thiserror = "1.0.19"
log = "0.4"
env_logger = "0.9"
actix-web = "4"
lazy_static = "1.4.0"