[package]
name = "push-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
diesel = { version = "1.4.4", features = ["mysql"] }
dotenv = "0.15.0"
reqwest = { version = "0.11.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[profile.release]
strip = true