[package]
name = "quiz-notifier"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ops-api"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.38"
actix-http = "1.0.1"
actix-web = "2.0.0"
actix-rt = "1"
mysql = "*"
diesel = { version = "1.4.5", features = ["r2d2", "mysql"] }
r2d2 = "0.8.9"
lazy_static = "1.4.0"