[package]
name = "quiz-notifier"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ops-api"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.38"
actix-http = "1.0.1"
actix-web = "2.0.0"
actix-rt = "1"
anyhow = "1.0.31"
thiserror = "1.0.19"
serde = "1.0.110"
serde_json = "1.0.53"
log = "0.4.8"
env_logger = "0.7.1"
diesel = { version = "1.4.5", features = ["r2d2", "mysql"] }
r2d2 = "0.8.9"
lazy_static = "1.4.0"
derive-getters = "0.2.0"
derive-new = "0.5"
itertools = "0.9.0"

[dev-dependencies]
mock-it = "0.3.0"
